# lighthouse2tracking

./: .gitignore  .gitmodules  README.md  print_frame.py  print_frame_log.py  timeToAngle.py  timeToAngle_prove.py  timeToAngle_prove_intersection.py
LOG/: dump.txt  dump1.txt
SensorDecodingFPGA/: pins.pcf  top.asc  top.rpt  top.v
SensorDecodingFPGA/dump/: common.v  fsm  pulsdump  selector  working_buffer
SensorDecodingFPGA/ip/lighthouse/: LighthouseTopLevel.v  PulseOffsetFinder.v  blackboxes.v  interface.v  streamArbiter.v
TrackerInterfaceFPGA/DarkRoom_esp32/: DarkRoom_esp32.ino  DarkRoom_esp8266.ino  Makefile  fifo.h  lighthouse.pb.h  lighthouse.pb.h.gch  lighthouse2Data.cpp  lighthouse2Data.hpp  logging.cpp  logging.h  pb.h  protoLighthouse.cpp  protoLighthouse.h  wirelessLove.cpp  wirelessLove.h
TrackerInterfaceFPGA/DarkRoom_esp32/dump/: I2Cdev.h  hspi_slave.c  lighthouse.pb.c
TrackerInterfaceFPGA/DarkRoom_esp32/nanopbdump/: lighthouse.pb.cc
Triangulation/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Triangulation/devel/include/roboy_cognition_msgs/: AssertProperty.h  AssertPropertyRequest.h  CallQuery.h  CallQueryResponse.h  CheckProperty.h  CheckPropertyResponse.h  CheckQuery.h  CheckQueryRequest.h  CheckQueryResponse.h  CreateInstanceRequest.h  DataQuery.h  DataQueryRequest.h  DataQueryResponse.h  DescribeScene.h  (+53 more)
Triangulation/src/common_utilities/: CMakeLists.txt  package.xml
Triangulation/src/common_utilities/arduino/spi_coms_motorboard/: spi_coms_motorboard.ino
Triangulation/src/common_utilities/bash/: prepareRobotSDF.bash  replaceAWordInEveryFileInDir.bash  replaceAWordInFile.bash
Triangulation/src/common_utilities/include/common_utilities/: MotorConfig.hpp  rviz_visualization.hpp
Triangulation/src/common_utilities/python/: README.md  convertUrdfToOpenraveXML.py  order_cardsflow_xml.py  reduce-stl-dae-bpy.py  reduceMesh.py  reduceMeshSingleFile.py  reduceMeshesInDirectory.py  update_mesh_uri.py  viaPointsPlugin.py
Triangulation/src/common_utilities/python/step-stl-dae/: stl-dae-bpy.py
Triangulation/src/common_utilities/src/: MotorConfig.cpp  ROS_MASTER_URI_broadcaster.cpp  UDPSocket.cpp  rfid_unlocker.cpp  rviz_visualization.cpp
Triangulation/src/robots/: CMakeLists.txt
Triangulation/src/roboy_darkroom/vive_ros/: CMakeLists.txt  INSTALL.md  package.xml
Triangulation/src/roboy_darkroom/vive_ros/include/vive_ros/: vr_interface.h
Triangulation/src/roboy_darkroom/vive_ros/src/: vive_node.cpp  vr_interface.cpp
Triangulation/src/roboy_lighthouse2_tracking/: CMakeLists.txt  README.md  main.cpp
UDPtoROS/: README.md
UDPtoROS/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
UDPtoROS/src/roboy_lighthouse2/: main.cpp
dataevaluation/: Lighthouse10secCapture_Station(100MHz_1Sensor).dsl  Lighthouse10secCapture_Station(100MHz_2Sensor).dsl  Lighthouse10secCapture_Station(100MHz_2Sensor_EfromSens2).dsl  Lighthouse10secCapture_Station(50MHz_2Sensor).dsl  Lighthouse10secCapture_Station1(FB9090232D).csv  Lighthouse10secCapture_Station1(FB9090232D).dsl  Lighthouse10secCapture_Station1(FB9090232D)_failsafe.csv  Lighthouse10secCapture_Station2(FB808008AF).csv  Lighthouse10secCapture_Station2(FB808008AF).dsl  Lighthouse10secCapture_Station2(FB808008AF)_failsafe.csv  horse_tracker_raw_20200825_063434.pkl
dataevaluation/decode/: LH10secCapture_Station_100MHz_1Sensor.csv  a.csv  b.csv  decode.py  out.csv  preprocess.py  test.csv
ip-core/ASCII_LUT/: ascii_conv.v  ascii_conv.v.bak
ip-core/TS4231/: TS4231_interface.v  TS4231_interface.v.bak  TS43231_datastream.v  TS43231_datastream.v.bak  TS43231_init.v  ts4231_hw.tcl
ip-core/lighthouse2decode/: DdrBmcDecoder.v  LighthouseTopLevel.v  OffsetFinder.v  PolyFinder.v  PulsTimer.v  lighthouse2decode.v
sandbox/libusbTest/: README.md
sandbox/libusbTest/src/: main.c
sandbox/rosPub/devel/: setup.sh
sandbox/workingUsbRosInterface/devel/: .catkin
sandbox/workingUsbRosInterface/src/hdk_ros/: CMakeLists.txt  main.cpp  package.xml
sandbox/workingUsbRosInterface/src/hdk_ros/include/: usbHidInterface.cpp  usbHidInterface.h
sandbox/workingUsbRosInterface/src/hdk_ros/lib/: hdk_parser.hpp
sandbox/workingUsbRosInterface/src/hdk_ros/src/: hdk_parser.cpp  rayFinder.cpp
testbench/: TB_TS4.qpf  TB_TS4.qsf  TB_TS4.v  TB_TS4_nativelink_simulation.rpt  TS43231_init.v  tb.qsys  tb.sopcinfo  tbgen.py
testbench/.qsys_edit/: preferences.xml
testbench/db/: TB_TS4.(0).cnf.cdb  TB_TS4.(0).cnf.hdb  TB_TS4.cbx.xml  TB_TS4.cmp.rdb  TB_TS4.cmp_merge.kpt  TB_TS4.db_info  TB_TS4.hier_info  TB_TS4.hif  TB_TS4.map.bpm  TB_TS4.map.cdb  TB_TS4.map.hdb  TB_TS4.map.kpt  TB_TS4.map.qmsg  TB_TS4.map.rdb  TB_TS4.map_bb.cdb  TB_TS4.map_bb.hdb  TB_TS4.pre_map.hdb  TB_TS4.root_partition.map.reg_db.cdb  TB_TS4.rtlv.hdb  TB_TS4.rtlv_sg.cdb  prev_cmp_TB_TS4.qmsg
testbench/incremental_db/compiled_partitions/: TB_TS4.db_info  TB_TS4.root_partition.map.cdb  TB_TS4.root_partition.map.dpi  TB_TS4.root_partition.map.hbdb.cdb  TB_TS4.root_partition.map.hbdb.hdb  TB_TS4.root_partition.map.hdb  TB_TS4.root_partition.map.kpt
testbench/output_files/: TB_TS4.done  TB_TS4.flow.rpt  TB_TS4.map.rpt  TB_TS4.map.smsg  TB_TS4.map.summary
testbench/simulation/modelsim/: TB_TS4_run_msim_rtl_verilog.do  msim_transcript  vlog.opt  vsim.wlf  wave.do
testbench/tb/: tb.bsf  tb.cmp  tb.html  tb.xml  tb_bb.v  tb_generation.rpt  tb_inst.v  tb_inst.vhd
testbench/tb/synthesis/: tb.debuginfo  tb.qip  tb.v
tools/: README.md  lfsr_gen.cpp  lfsr_polySearch.cpp  lfsr_read_test.cpp  log.txt  print_frame.py  search
usr/darkroom/: CMakeLists.txt  package.xml
usr/darkroom/src/: TrackedObject.cpp
usr/robots/exohaptic/: model.config
usr/robots/test_lighthouse/: model.config
(+1258 files in other folders)
